--- a/alexandria/app/src/main/res/layout/fragment_list_of_books.xml
+++ b/alexandria/app/src/main/res/layout/fragment_list_of_books.xml
@@ -19,7 +19,7 @@
             android:layout_marginTop="5dp"
             android:layout_alignParentEnd="true"/>
 
-        <EditText
+        <android.support.v7.widget.SearchView
             android:layout_width = "fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/searchText"
