Implementation for issue #9 - collection widget.

--- a/Football_Scores-master/app/src/main/res/layout/football_scores_widget.xml
+++ b/Football_Scores-master/app/src/main/res/layout/football_scores_widget.xml
@@ -1,7 +1,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:padding="@dimen/widget_margin" android:background="#09C"
+    android:padding="@dimen/widget_margin" android:background="@drawable/widget_bg"
     android:id="@+id/widget_layout">
 
-    <include layout="@layout/scores_list_item"/>
+    <ListView
+        android:id="@+id/widget_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"/>
+
+    <TextView
+        android:id="@+id/widget_empty_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@string/no_upcoming_match_text"/>
+
 </RelativeLayout>
