--- a/Football_Scores-master/app/src/main/res/xml/football_scores_widget_info.xml
+++ b/Football_Scores-master/app/src/main/res/xml/football_scores_widget_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="110dp" android:minHeight="40dp" android:updatePeriodMillis="0"
+    android:minWidth="250dp" android:minHeight="110dp" android:updatePeriodMillis="0"
     android:previewImage="@drawable/example_appwidget_preview"
     android:widgetCategory="home_screen"
-    android:initialLayout="@layout/scores_list_item" android:resizeMode="horizontal|vertical"
+    android:initialLayout="@layout/football_scores_widget" android:resizeMode="horizontal|vertical"
     />
