--- a/Football_Scores-master/app/src/main/res/layout/football_scores_widget.xml
+++ b/Football_Scores-master/app/src/main/res/layout/football_scores_widget.xml
@@ -9,8 +9,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:layout_marginTop="4dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"/>
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
 
     <TextView
         android:id="@+id/widget_empty_view"
@@ -18,8 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:layout_marginTop="4dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/no_upcoming_match_text"/>
 
 </RelativeLayout>
