--- a/Football_Scores-master/app/src/main/res/layout/detail_fragment.xml
+++ b/Football_Scores-master/app/src/main/res/layout/detail_fragment.xml
@@ -38,7 +38,8 @@
         android:id="@+id/share_button"
         android:drawableStart="@android:drawable/ic_menu_share"
         android:paddingStart="120dp"
-        android:paddingEnd="120dp"/>
+        android:paddingEnd="120dp"
+            android:contentDescription="@string/share_button_description"/>
     </FrameLayout>
 
 </LinearLayout>
